--- a/documentation/modules/oauth/con-oauth-migration.adoc
+++ b/documentation/modules/oauth/con-oauth-migration.adoc
@@ -8,7 +8,7 @@ The `oauth` and `keycloak` authentication types are deprecated and will be remov
 Kafka listeners and Kafka clients must now configure OAuth 2.0 using the `custom` authentication type.
 OAuth 2.0 support remains the same; only the configuration model changes.
 
-This change affects **both server-side listener configuration** and **client-side authentication** for Strimzi-managed components and external Kafka applications.
+This change affects **both server-side listener configuration** and **client-side authentication** for Strimzi-managed components.
 
 For more information on the configuration options, see the following API schema references:
 
