--- a/documentation/modules/configuring/con-config-mirrormaker2-connectors.adoc
+++ b/documentation/modules/configuring/con-config-mirrormaker2-connectors.adoc
@@ -23,7 +23,7 @@ MirrorMaker 2 consists of the following connectors:
 `MirrorHeartbeatConnector` is not configurable through the `KafkaMirrorMaker2` custom resource.
 To run a `MirrorHeartbeatConnector`, use a separate `KafkaConnect` and `KafkaConnector` custom resource.
 
-For a full list of supported MirrorMaker 2 connector properties, including common configuration and connector-specific options, see the Apache Kafka documentation.
+For a full list of supported MirrorMaker 2 connector properties, including common configuration and connector-specific options, see the {kafkaDoc}.
 
 WARNING: Configure the following properties with the *same values in both the source and checkpoint connectors*:
 `replication.policy.class`, `replication.policy.separator`, `offset-syncs.topic.location`, and `topic.filter.class`.
