--- a/documentation/assemblies/deploying/assembly-deploy-intro.adoc
+++ b/documentation/assemblies/deploying/assembly-deploy-intro.adoc
@@ -9,7 +9,7 @@
 
 //Standard introduction text for the product
 [role="_abstract"]
-Strimzi simplifies the process of running link:https://kafka.apache.org/[Apache Kafka^] within a Kubernetes cluster.
+Strimzi simplifies the process of running {ApacheKafkaHome} within a Kubernetes cluster.
 
 This guide provides instructions for deploying and managing Strimzi.
 Deployment options and steps are covered using the example installation files included with Strimzi. 
