--- a/documentation/assemblies/deploying/assembly-deploy-kafka-connect.adoc
+++ b/documentation/assemblies/deploying/assembly-deploy-kafka-connect.adoc
@@ -9,7 +9,7 @@
 = Deploying Kafka Connect
 
 [role="_abstract"]
-link:https://kafka.apache.org/documentation/#connect[Kafka Connect^] is an integration toolkit for streaming data between Kafka brokers and other systems using connector plugins.
+link:{ApacheKafkaDocsBase}kafka-connect/overview/[Kafka Connect^] is an integration toolkit for streaming data between Kafka brokers and other systems using connector plugins.
 Kafka Connect provides a framework for integrating Kafka with an external data source or target, such as a database or messaging system, for import or export of data using connectors.
 Connectors are plugins that provide the connection configuration needed.
 
