--- a/documentation/assemblies/metrics/assembly_metrics-prometheus-setup.adoc
+++ b/documentation/assemblies/metrics/assembly_metrics-prometheus-setup.adoc
@@ -25,7 +25,7 @@ After enabling metrics, you can integrate with Prometheus:
 . xref:assembly-metrics-prometheus-{context}[Setting up Prometheus]
 . xref:proc-metrics-deploying-prometheus-alertmanager-{context}[Deploying Prometheus Alertmanager]
 
-Strimzi provides an xref:assembly-metrics-config-files-str[example Grafana dashboards] to display visualizations of metrics.
+Strimzi provides xref:assembly-metrics-config-files-str[example Grafana dashboards] to display visualizations of metrics.
 The exposed metrics provide the monitoring data when you xref:proc-metrics-grafana-dashboard-str[enable the Grafana dashboard].
 
 include::../../modules/metrics/proc-jmx-exporter-metrics-kafka-deploy-options.adoc[leveloffset=+1]
