--- a/documentation/modules/configuring/con-mm2-recovery.adoc
+++ b/documentation/modules/configuring/con-mm2-recovery.adoc
@@ -25,20 +25,20 @@ For a simpler and more reliable failback process, rebuild the original active cl
 
 Follow these best practices for disaster recovery in the event of failure of the active cluster in an active/passive configuration:
 
-. Promote the passive recovery cluster to an active role. +
+. Promote the passive recovery cluster to an active role. 
 Designate the passive cluster as the active cluster for all client connections.
 This minimizes downtime and ensures operations can continue.
-. Redirect applications to the new active recovery cluster. +
+. Redirect applications to the new active recovery cluster. 
 MirrorMaker 2 synchronizes committed offsets to passive clusters, allowing consumer applications to resume from the last transferred offset when switching to the recovery cluster.
 However, because of the time lag in offset synchronization, switching consumers may result in some message duplication.
 To minimize duplication, switch all members of a consumer group together as soon as possible. 
 Keeping the group intact minimizes the chance of a consumer processing duplicate messages.
-. Remove the MirrorMaker 2 configuration for replication from the original active cluster to the passive cluster. +
+. Remove the MirrorMaker 2 configuration for replication from the original active cluster to the passive cluster. 
 After failover, the original configuration is no longer needed and should be removed to avoid conflicts.
 . Re-create the failed cluster in a clean state, adhering to the original configuration.
-. Deploy a new MirrorMaker 2 instance to replicate data from the active recovery cluster to the rebuilt cluster. +
+. Deploy a new MirrorMaker 2 instance to replicate data from the active recovery cluster to the rebuilt cluster. 
 Treat the rebuilt cluster as the passive cluster during this replication process.
-To prevent automatic renaming of topics, configure MirrorMaker 2 to use the `IdentityReplicationPolicy` by setting the `replication.policy.class` property in the MirrorMaker 2 configuration.
+To prevent automatic renaming of topics, configure MirrorMaker 2 to use the `IdentityReplicationPolicy` by setting the `replication.policy.class` property in the connector configuration.
 With this configuration applied, topics retain their original names in the target cluster.
 . Ensure the rebuilt cluster mirrors all data from the now-active recovery cluster.
 . (Optional) Promote the rebuilt cluster back to active status by redirecting applications to the rebuilt cluster, after ensuring it is fully synchronized with the active cluster.
