docs(review): link fix
Signed-off-by: prmellor <pmellor@redhat.com>

--- a/documentation/api/io.strimzi.api.kafka.model.user.KafkaUserQuotas.adoc
+++ b/documentation/api/io.strimzi.api.kafka.model.user.KafkaUserQuotas.adoc
@@ -13,4 +13,4 @@ spec:
     controllerMutationRate: 10
 ----
 
-For more information, see the link:{ApacheKafkaDocsBase}/design/design/[Apache Kafka design documentation^].
+For more information, see the link:{ApacheKafkaDocsBase}design/design/[Apache Kafka design documentation^].
